--- a/.github/workflows/sync_token.yml
+++ b/.github/workflows/sync_token.yml
@@ -1,26 +1,40 @@
-name: Auto Sync token_bd.json every 30 min
+name: Auto Sync token_bd.json from txcpanel/like-api
 
 on:
   schedule:
-    - cron: "*/30 * * * *" # runs every 30 minutes
-  workflow_dispatch: # lets you trigger manually too
+    - cron: "*/30 * * * *" # ⏱️ Runs every 30 minutes
+  workflow_dispatch: # 🖐 Manual trigger from Actions tab
+
+permissions:
+  contents: write  # ✅ Allow workflow to push changes
 
 jobs:
   sync:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout your repo
+      - name: 🛠 Checkout your repository
         uses: actions/checkout@v4
 
-      - name: Download latest token file from source repo
+      - name: 🌐 Download latest token file from source repo
         run: |
           mkdir -p tokens
-          curl -o tokens/token_bd.json https://raw.githubusercontent.com/txcpanel/like-api/main/tokens/token_bd.json
+          echo "Downloading latest token_bd.json..."
+          curl -f -L -o tokens/token_bd.json https://raw.githubusercontent.com/txcpanel/like-api/main/tokens/token_bd.json
+          echo "✅ Download completed!"
 
-      - name: Commit and push if changed
+      - name: 🧠 Check if file changed and push update
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
+
           git add tokens/token_bd.json
-          git diff --quiet && echo "No changes to commit" || (git commit -m "Auto-sync token_bd.json" && git push)
+
+          if git diff --cached --quiet; then
+            echo "⚠️ No changes detected — nothing to commit."
+          else
+            echo "✅ Changes detected — committing and pushing..."
+            git commit -m "Auto-sync token_bd.json from txcpanel/like-api"
+            git push
+            echo "🚀 Push complete!"
+          fi
